2010-02-26  Gavin Barraclough  <barraclough@apple.com>

        Rubber Stamped by Geoff Garen.

        Remove wrec.  All builds should have switched to yarr by now.

        * Android.mk:
        * GNUmakefile.am:
        * JavaScriptCore.gypi:
        * JavaScriptCore.pri:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreCommon.vsprops:
        * JavaScriptCore.vcproj/jsc/jscCommon.vsprops:
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * runtime/RegExp.cpp:
        (JSC::RegExp::match):
        * runtime/RegExp.h:
        * wrec: Removed.
        * wrec/CharacterClass.cpp: Removed.
        * wrec/CharacterClass.h: Removed.
        * wrec/CharacterClassConstructor.cpp: Removed.
        * wrec/CharacterClassConstructor.h: Removed.
        * wrec/Escapes.h: Removed.
        * wrec/Quantifier.h: Removed.
        * wrec/WREC.cpp: Removed.
        * wrec/WREC.h: Removed.
        * wrec/WRECFunctors.cpp: Removed.
        * wrec/WRECFunctors.h: Removed.
        * wrec/WRECGenerator.cpp: Removed.
        * wrec/WRECGenerator.h: Removed.
        * wrec/WRECParser.cpp: Removed.
        * wrec/WRECParser.h: Removed.
        * wscript:

2010-02-26  Oliver Hunt  <oliver@apple.com>

        Reviewed by Geoff Garen.

        Make the lookup table generator include an explicit cast to expected
        type of the function.  We do this because otherwise the blind intptr_t
        cast that is subsequently applied allows incorrectly typed functions
        to be inserted into the table, where they will only fail at runtime.
        This change makes such errors produce a compile time failure.

        * create_hash_table:

2010-02-26  Janne Koskinen  <janne.p.koskinen@digia.com>

        Reviewed by Simon Hausmann.

        [Qt] Symbian specific getCPUTime implemetation
        https://bugs.webkit.org/show_bug.cgi?id=34742

        Default implementation doesn't work on Symbian devices.