@@ -1,3 +1,15 @@
+2010-03-01  Tor Arne Vestbø  <tor.arne.vestbo@nokia.com>
+
+        Reviewed by Simon Hausmann.
+
+        Fix the Qt build on Mac OS X/Cocoa 64-bit
+
+        Use the proper event/drawing-model guards instead of global 64-bit
+        guard for the NPAPI plugin implementation (view and package).
+
+        * plugins/mac/PluginPackageMac.cpp: Change guards and fix warning
+        * plugins/mac/PluginViewMac.cpp: Remove 64-bit guard
+
 2010-02-27  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Timothy Hatcher.
